# Workforce

./: .env.example  .gitignore  README.md  pyproject.toml  reset_db.py
alembic/: env.py
alembic/versions/: update_crew_id_to_uuid.py
app/: database.py  main.py  models.py  tools.py
app/routers/: crews.py
app/tools/: __init__.py  confluence.py  jira.py  news.py  python_repl.py  weather.py  web_search.py  wikipedia.py
frontend/: package-lock.json  package.json
frontend/public/: index.html  manifest.json
frontend/src/: App.js
frontend/src/config/: llmConfig.js
frontend/src/pages/: CrewCreate.js  CrewDetail.js  CrewEdit.js  CrewExecutions.js  CrewList.js  Executions.js
